--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "piada",
-  "version": "0.2.2",
+  "name": "teles",
+  "version": "0.0.1",
   "description": "Piadas aleatórias via linha de comando.",
   "bin": {
-    "piada": "./bin/piada"
+    "teles": "./bin/teles"
   },
   "dependencies": {
     "iconv-lite": "^0.4.11"
   },
-  "repository": "theuves/piada",
-  "author": "Matheus Alves",
+  "repository": "lucasteles/teles-jokes",
+  "author": "Lucas Teles",
   "license": "MIT"
 }
